apps/microbin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: microbin
spec:
  ports:
    - port: 80
      targetPort: microbin
  selector:
    app.kubernetes.io/name: microbin
